--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "markdown-toc": "1.2.0",
     "marked": "1.2.7",
     "masonry-layout": "4.2.2",
+    "md-to-pdf": "^3.2.1",
     "moment": "2.29.1",
     "morgan": "1.10.0",
     "node-fetch": "2.6.1",
